modules/cli/src/test/resources/bad/reach/globals/gdo/Test04.scr
module bad.reach.globals.gdo.Test04;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		do Foo(A, B);  // Unguarded gets unfolded..
		2() from A to B;   // ..becomes unreachable after continue once unfolded
	}
}

